--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.vmforce.samples.service.singlemodule</groupId>
     <version>0.0.1-SNAPSHOT</version>
     <artifactId>sampleWebApp-archetype</artifactId>
-    <packaging>maven-archetype</packaging>
+    <packaging>jar</packaging>
     <properties>
         <force.repo.url>http://repo.t.salesforce.com/archiva/repository/releases</force.repo.url>
         <force.repo.snapshot.url>http://repo.t.salesforce.com/archiva/repository/snapshots</force.repo.snapshot.url>
@@ -22,6 +22,14 @@
             <url>${force.repo.snapshot.url}</url>
         </snapshotRepository>
     </distributionManagement>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-archetype-plugin</artifactId>
+                <version>2.0</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
