adding forceUrl as a prop to archetype generate and populate it into forceDatabase.properties

--- a/src/main/resources/archetype-resources/src/main/resources/forceDatabase.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/forceDatabase.properties
@@ -1,3 +1,5 @@
+
+
 # For a real production deployment, you should strongly consider using one of the environment variable based
 # JPA setup strategies.
 #
@@ -5,4 +7,4 @@
 # You can obtain a token from within the Admin console, Setup -> My Personal Information -> Reset my Security Token
 # You are also emailed a new security token any time you change your force.com password.
 
-url=force://vmf01.t.salesforce.com/services/Soap/u/20.0;user=<your username>;password=<your password>
+url = ${forceUrl}
