--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -15,6 +15,7 @@
         <force.sdk.version>20.0.1-SNAPSHOT</force.sdk.version>
         <force.repo.url>http://repo.t.salesforce.com/archiva/repository/releases</force.repo.url>
         <force.repo.snapshot.url>http://repo.t.salesforce.com/archiva/repository/snapshots</force.repo.snapshot.url>
+        <datanucleus.enhancer.version>2.1.0-release</datanucleus.enhancer.version>
     </properties>
     <distributionManagement>
         <repository>
@@ -324,24 +325,24 @@
             <plugin>
                 <groupId>org.datanucleus</groupId>
                 <artifactId>maven-datanucleus-plugin</artifactId>
-                <version>2.1.0-release</version>
+                <version>${datanucleus.enhancer.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.datanucleus</groupId>
                         <artifactId>datanucleus-core</artifactId>
-                        <version>2.1.0-release</version>
+                        <version>${datanucleus.enhancer.version}</version>
                         <scope>runtime</scope>
                     </dependency>
                     <dependency>
                         <groupId>org.datanucleus</groupId>
                         <artifactId>datanucleus-enhancer</artifactId>
-                        <version>2.1.0-release</version>
+                        <version>${datanucleus.enhancer.version}</version>
                         <scope>runtime</scope>
                     </dependency>
                     <dependency>
                         <groupId>org.datanucleus</groupId>
                         <artifactId>datanucleus-rdbms</artifactId>
-                        <version>2.1.0-release</version>
+                        <version>${datanucleus.enhancer.version}</version>
                         <scope>runtime</scope>
                         <optional>true</optional>
                     </dependency>
@@ -349,14 +350,17 @@
                     <dependency>
                         <groupId>org.datanucleus</groupId>
                         <artifactId>datanucleus-jpa</artifactId>
-                        <version>2.1.0-release</version>
+                        <version>${datanucleus.enhancer.version}</version>
                         <scope>runtime</scope>
                         <optional>true</optional>
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <api>JPA</api>
+                    <mappingIncludes>**/*.class</mappingIncludes>
                     <verbose>true</verbose>
+                    <enhancerName>ASM</enhancerName>
+                    <api>JPA</api>
+                    <props>${basedir}/datanucleus.properties</props>
                 </configuration>
                 <executions>
                     <execution>
